--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -8,11 +8,36 @@
     <string name="tab_main_competition">竞赛</string>
     <string name="tab_main_learning">学堂</string>
     <string name="tab_main_me">我的</string>
+    <string name="all_product">全部产品</string>
+    <string name="drag">拖拽</string>
+    <string name="push_to_top">置顶</string>
+    <string name="select_all">全部</string>
+    <string name="delete">删除</string>
+    <string name="done">完成</string>
 
 
     <string-array name="jazz_artist_names">
         <item>Brad Mehldau</item>
         <item>Joshua Redman</item>
+        <item>Chick Corea</item>
+        <item>Kurt Rosenwinkel</item>
+        <item>Miles Davis</item>
+        <item>Wayne Shorter</item>
+        <item>Michael Brecker</item>
+        <item>Herbie Hancock</item>
+        <item>Joe Zawinul</item>
+        <item>Brian Blade</item>
+        <item>Jeff Ballard</item>
+        <item>Larry Grenadier</item>
+        <item>Keith Jarrett</item>
+        <item>McCoy Tyner</item>
+        <item>Stephon Harris</item>
+        <item>Mark Turner</item>
+    </string-array>
+
+    <string-array name="jazz_artist_symbol">
+        <item>123456</item>
+        <item>1221125</item>
         <item>Chick Corea</item>
         <item>Kurt Rosenwinkel</item>
         <item>Miles Davis</item>
