--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -14,6 +14,10 @@
     <string name="select_all">全部</string>
     <string name="delete">删除</string>
     <string name="done">完成</string>
+    <string name="remove_hint_message">确认删除吗？</string>
+    <string name="dialog_title">提示</string>
+    <string name="cancel">取消</string>
+    <string name="confirm">确认</string>
 
 
     <string-array name="jazz_artist_names">
