--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">EatProject</string>
+    <string name="app_name">盈交易</string>
 
     <string name="tab_main_trade">交易</string>
     <string name="tab_main_buy_what">买什么</string>
