--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="all_product">全部产品</string>
     <string name="drag">拖拽</string>
     <string name="push_to_top">置顶</string>
+    <string name="notification_switch">提醒</string>
     <string name="select_all">全部</string>
     <string name="delete">删除</string>
     <string name="done">完成</string>
